# ADCIRC_practice

./: README.md
2019_extreme/: readme.md
2019_extreme/2D/: GSHHS_l_L1_mod.dbf  GSHHS_l_L1_mod.shp  GSHHS_l_L1_mod.shx  fort.15  fort.15_SWAN  fort.26  fort.26_test-SWAN-output  mesh_v2.m  plot_time-series_hs_p1-p4.ipynb  readme.md
2019_extreme/3D/: readme.md
Mike/: readme.md
Mike/2019_event/: convert_wind.m  create_temp-strat_file.ipynb  readme.md
Mike/gsl/: def_sketch.ipynb  readme.md  shoreline_identify.ipynb  shoreline_plot.ipynb  wind_speed_selection-ranking.ipynb
OM2D_mesh/: GSHHS_l_L1.dbf  GSHHS_l_L1.qmd  GSHHS_l_L1.shp  GSHHS_l_L1.shx  mesh_v1.m  readme.md
era5_roughness/: create_fort22.ipynb  create_fort22_NWS5.ipynb  plot_era5_data.ipynb  plot_era5_data_v2.ipynb  plot_manning.ipynb  readme.md
era5_roughness/future_climate_data/: nc_crop_conversion.ipynb  plot_contours_cleanup.ipynb  readme.md
prep_f13/: compile.sh  f13builder.bash  f13builder.in  readme.md  sshagiderv01.f90  sssiderv02.f90  wrisoutabox.f90
prep_f14/: GSHHS_l_L1.dbf  GSHHS_l_L1.qmd  GSHHS_l_L1.shp  GSHHS_l_L1.shx  GSHHS_l_L1_mod.dbf  GSHHS_l_L1_mod.shp  GSHHS_l_L1_mod.shx  mesh_v1.m  mesh_v2.1_wetting-drying.m  mesh_v2.m  mesh_v2_gsl.m  readme.md  writefort14.m
prep_f14/gsl/: main-basin_east-arm.nc  (+5 more)
prep_f22/: create_fort22_NWS=8.ipynb  readme.md
single-layer_isothermal_noSWAN/: cleanCase.sh  fort.13  fort.15  fort.15_imp  readme.md  runCase.sh
single-layer_isothermal_noSWAN/post-processing/: plotting.py  post_processing.ipynb  pyproject.toml  readme.md  testing.ipynb
(+13 files in other folders)
